[gd_scene load_steps=2 format=2]

[ext_resource path="res://RaptorRender/GUI/ItemListBox/ItemListBox.gd" type="Script" id=1]

[node name="ItemListBox" type="MarginContainer"]
margin_right = 396.0
margin_bottom = 427.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGColorRect" type="ColorRect" parent="."]
margin_right = 396.0
margin_bottom = 427.0
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="ItemVBox" type="VBoxContainer" parent="."]
margin_right = 396.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
[connection signal="mouse_entered" from="." to="." method="_on_ItemListBox_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemListBox_mouse_exited"]
